set up database

--- a/config.json
+++ b/config.json
@@ -10,9 +10,9 @@
         {"name": "32", "ip": "127.0.0.1", "port": 5008},
         {"name": "33", "ip": "127.0.0.1", "port": 5009}
     ],
-    "clients"[
-        {"name": "41", "ip": "127.0.0.1", "port": 5001},
-        {"name": "42", "ip": "127.0.0.1", "port": 5002},
-        {"name": "43", "ip": "127.0.0.1", "port": 5003}
+    "clients": [
+        {"name": "41", "ip": "127.0.0.1", "port": 5011},
+        {"name": "42", "ip": "127.0.0.1", "port": 5012},
+        {"name": "43", "ip": "127.0.0.1", "port": 5013}
     ]
   }
